--- a/sample/src/main/res/layout/activity_camera.xml
+++ b/sample/src/main/res/layout/activity_camera.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         app:blurRadius="10"
         app:scaleFactor="15"
+        app:updateFrequency="100"
         app:targetView="@+id/textureView"
     />
 </FrameLayout>
