--- a/sample/src/main/res/layout/activity_image.xml
+++ b/sample/src/main/res/layout/activity_image.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/image"/>
     <com.dgroup.blurlayoutlib.BlurLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:targetView="@+id/image"
-    />
+        android:layout_gravity="center"
+        app:cropSubArea="true"
+        app:blurRadius="3"
+        app:scaleFactor="15"
+        app:targetView="@+id/image"/>
 
-</LinearLayout>
+</FrameLayout>
