--- a/sample/src/main/res/layout/activity_image.xml
+++ b/sample/src/main/res/layout/activity_image.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:scaleType="fitXY"
         android:src="@drawable/image"/>
-    <com.dgroup.blurlayoutlib.BlurLayout
+    <com.dgroup.views.BlurLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
